# lustre-obj-copytool

./: .gitignore  README.md  config.cfg.dist.rados  config.cfg.dist.s3  configure.ac
src/: Makefile.am  ct_common.c  ct_common.h  lhsmtool_rados.c  lhsmtool_rados.h  lhsmtool_s3.c  lhsmtool_s3.h
